--- a/index.html
+++ b/index.html
@@ -4,26 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stephen Memory game</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="stephen.js"></script>
 </head>
 <body>
-    <section class="">   
-    <div>
-    <button class="button-1">1</button>
-    <button class="button-2">2</button>
-    <button class="button-3">3</button>
-    <button class="button-4">4</button>
-    </div>
-    </section>
-    <section class="controls">
+    <h1>Stephen's Memory Game</h1>
+    <section>   
+    <div class="container-lg stephen-game button-selectors">
+        <div class="row text-center"> 
+            <button class="button-1">1</button>
+            <button class="button-2">2</button>
+        </div>
+        <div class="row">
+            <button class="button-3">3</button>
+            <button class="button-4">4</button>
+        </div>
+    <div class="controls">
         <button class="start">Start</button>
         <button class="power">On/Off</button>
-        <div class="difficulty">
-            <button class="dif-plus">+</button>
-            <p>difficulty</p>
-            <button class="dif-minus">-</button>
+        <div class="container difficulty">
+            <div class="row">
+                <button class="dif-plus">+</button>
+                <h3>Difficulty</h3>
+                <button class="dif-minus">-</button>
+            </div>
         </div>
-    </section>
+    </section> 
 </body>
 </html>
