--- a/index.html
+++ b/index.html
@@ -6,30 +6,40 @@
     <title>Stephen Memory game</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="stephen.js"></script>
+   
 </head>
 <body>
-    <h1>Stephen's Memory Game</h1>
-    <section>   
-    <div class="container-lg stephen-game button-selectors">
+    <h1 class="text-center heading">Stephen's Memory Game</h1>  
+    <div class="container-sm stephen-game button-selectors">
         <div class="row text-center"> 
-            <button class="button-1">1</button>
-            <button class="button-2">2</button>
+            <button class="button-1" id="topLeft">1</button>
+            <button class="button-2" id="topRight">2</button>
         </div>
         <div class="row">
-            <button class="button-3">3</button>
-            <button class="button-4">4</button>
+            <button class="button-3" id="bottomleft">3</button>
+            <button class="button-4" id="bottomright">4</button>
         </div>
-    <div class="controls">
-        <button class="start">Start</button>
-        <button class="power">On/Off</button>
-        <div class="container difficulty">
-            <div class="row">
-                <button class="dif-plus">+</button>
-                <h3>Difficulty</h3>
-                <button class="dif-minus">-</button>
+    </div>
+    <div class="container-lg controls text-center">
+        <div class="row">
+            <div class="col">
+                <button class="power" id="power">On/Off</button>
             </div>
+            <div class="col">
+                    <button class="difficulty" id="difficulty">Difficulty</button>
+                </div>
+            <div class="col">
+                <button class="start" id="start">Start</button>
+            </div>   
         </div>
-    </section> 
+    </div>
+     <div class="container-lg difficulty text-center">
+            <div class="row">
+                <div class="col" id="turn">
+                    turn /count
+                </div>
+            </div>
+        </div>   
+    <script src="stephen.js"></script>  
 </body>
 </html>
