tested click events on all buttons- fixed a few error in code

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <button class="button-2" id="topRight">2</button>
         </div>
         <div class="row">
-            <button class="button-3" id="bottomleft">3</button>
-            <button class="button-4" id="bottomright">4</button>
+            <button class="button-3" id="bottomLeft">3</button>
+            <button class="button-4" id="bottomRight">4</button>
         </div>
     </div>
     <div class="container-lg controls text-center">
