added to if statments to Power and difficulty functions to apply options

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <div class="container-lg controls text-center">
         <div class="row">
             <div class="col">
-                <button class="power" id="power">On/Off</button>
+                <input  type="checkbox" class="power" id="power">On/Off</input>
             </div>
             <div class="col">
-                    <button class="difficulty" id="difficulty">Difficulty</button>
+                    <input type="checkbox" id="difficulty" class="difficulty">Difficulty</input>
                 </div>
             <div class="col">
-                <button class="start" id="start">Start</button>
+                <button type="button" id="start" class="start">Start</button>
             </div>   
         </div>
     </div>
