main play() function started and created random array of numbers- Staring game turn

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
     </div>
      <div class="container-lg difficulty text-center">
             <div class="row">
-                <div class="col" id="turn">
-                    turn /count
-                </div>
+                <div class="col" id="turn"></div>
             </div>
         </div>   
     <script src="stephen.js"></script>  
